# ChebTools

./: .gitignore  .gitmodules  .travis.yml  BattlesTrefethen.ipynb  CMakeLists.txt  Doxyfile  LICENSE  MANIFEST.in  README.md  TwoD.ipynb  appveyor.yml  environment.yml  main.cpp  pyproject.toml  setup.py  speed_test.cpp
.github/workflows/: build_wheels.yml  pypi.yml  runcatch.yml
JOSS/: make.py  make_pic.py  paper.bib  paper.md
include/ChebTools/: ChebTools.h  roots.h
include/ChebTools2D/: ChebTools2D.hpp
scripts/: FFTtest.py  TwoD.ipynb  cheb2d_Basu.py  fit_propane.py  speed_tests.py  test_2D.py  test_Basu.py  test_R32R134a.py  test_cheb.py  test_cheb2d_Basu.py  test_deriv.py  test_extrapolation.py  test_interval_splitting.py  test_summation.py
scripts/Basu/: Basu.cpp  BasuEigen.cpp  CMakeLists.txt
src/: ChebTools.cpp  nanobind_wrapper.cpp  pybind11_wrapper.cpp  speed_tests.cpp  test_2D.cpp
src/ChebTools/: __init__.py
tests/: tests.cpp
