[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "ChebTools"
description = "Tools for working with Chebyshev expansion"
readme = "README.md"
requires-python = ">=3.8"
version = "1.13.0"
authors = [
    { name = "Ian Bell", email = "ian.bell@nist.gov" },
]
#classifiers = [
#    "License :: BSD",
#]

[project.urls]
Homepage = "https://github.com/usnistgov/teqpflsh"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

cmake.verbose = true
#cmake.build-type = "Debug"
#cmake.args = ["-G Xcode", "-DXCODE_DEBUG_PYTHON=ON"]
#cmake.args = ["-DVERBOSE=ON"]

cmake.args = ["-DCHEBTOOLS_NO_MONOLITH=ON","-DCHEBTOOLS_NO_CATCH=ON", "-DCHEBTOOLS_NANOBIND=ON"]

